WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46947
texImage2D fails on 16-bit-per-channel images
https://bugs.webkit.org/show_bug.cgi?id=46947
Summary
texImage2D fails on 16-bit-per-channel images
Zhenyao Mo
Reported
2010-09-30 17:41:21 PDT
Loading a 16-bit-per-channel will fail with an INVALID_VALUE error.
Attachments
patch
(23.05 KB, patch)
2010-09-30 17:46 PDT
,
Zhenyao Mo
zmo
: commit-queue-
Details
Formatted Diff
Diff
revised patch
(23.90 KB, patch)
2010-09-30 18:17 PDT
,
Zhenyao Mo
kbr
: review+
zmo
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2010-09-30 17:46:14 PDT
Created
attachment 69404
[details]
patch
Zhenyao Mo
Comment 2
2010-09-30 17:59:38 PDT
By the way, the 16-bit images are loading fine in Chromium Win, so adding this test entry should pass on all platforms.
Zhenyao Mo
Comment 3
2010-09-30 18:17:51 PDT
Created
attachment 69409
[details]
revised patch Forgot about also updating the expected.txt file.
Kenneth Russell
Comment 4
2010-10-01 15:43:41 PDT
Comment on
attachment 69409
[details]
revised patch View in context:
https://bugs.webkit.org/attachment.cgi?id=69409&action=review
Looks OK. I think we should try to figure out a different structure (like a table) for the large switch statements in GraphicsContext3D::getImageData because they're really getting out of hand. Please consider filing a follow-up bug to rethink the structure there. One minor comment-related comment.
> WebCore/platform/graphics/cg/GraphicsContext3DCG.cpp:131 > // This path is only accessible for MacOS earlier than 10.6.4.
Is this comment still accurate?
Zhenyao Mo
Comment 5
2010-10-01 16:05:33 PDT
(In reply to
comment #4
)
> (From update of
attachment 69409
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=69409&action=review
> > Looks OK. I think we should try to figure out a different structure (like a table) for the large switch statements in GraphicsContext3D::getImageData because they're really getting out of hand. Please consider filing a follow-up bug to rethink the structure there. One minor comment-related comment. > > > WebCore/platform/graphics/cg/GraphicsContext3DCG.cpp:131 > > // This path is only accessible for MacOS earlier than 10.6.4. > > Is this comment still accurate?
Yes, it still is. Alpha first formats are not encountered so far on 10.6.4. I'll leave the comments in. If you think it's un-necessary to keep them, we can remove them in the follow-up bug. I added these comments in case in the future such path got removed when a developer only deals with newer CG libs.
Zhenyao Mo
Comment 6
2010-10-01 16:08:47 PDT
Committed
r68940
: <
http://trac.webkit.org/changeset/68940
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug