2010-09-30  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        texImage2D fails on 16-bit-per-channel images
        https://bugs.webkit.org/show_bug.cgi?id=46947

        * platform/graphics/GraphicsContext3D.cpp: Handling 16-bit-per-channel source formats.
        (WebCore::convertColor16To8):
        (WebCore::doPacking):
        * platform/graphics/GraphicsContext3D.h: Ditto.
        * platform/graphics/cg/GraphicsContext3DCG.cpp: Ditto.
        (WebCore::GraphicsContext3D::getImageData):
2010-09-30  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        texImage2D fails on 16-bit-per-channel images
        https://bugs.webkit.org/show_bug.cgi?id=46947

        * fast/canvas/webgl/gl-teximage-expected.txt: Add a test case for loading 16-bit-per-channel images as textures.
        * fast/canvas/webgl/gl-teximage.html: Ditto.
        * fast/canvas/webgl/resources/green-2x2-16bit.png: Added.


Canonical link: https://commits.webkit.org/59561@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68940 268f45cc-cd09-0410-ab3c-d52691b4dbfc