WebCore/platform/graphics/cg/GraphicsContext3DCG.cpp
@@ -64,9 +64,15 @@ bool GraphicsContext3D::getImageData(Image* image,
         return false;
     size_t width = CGImageGetWidth(cgImage);
     size_t height = CGImageGetHeight(cgImage);
-    if (!width || !height || CGImageGetBitsPerComponent(cgImage) != 8)
+    if (!width || !height)
         return false;
-    size_t componentsPerPixel = CGImageGetBitsPerPixel(cgImage) / 8;
+    size_t bitsPerComponent = CGImageGetBitsPerComponent(cgImage);
+    size_t bitsPerPixel = CGImageGetBitsPerPixel(cgImage);
+    if (bitsPerComponent != 8 && bitsPerComponent != 16)
+        return false;
+    if (bitsPerPixel % bitsPerComponent)
+        return false;
+    size_t componentsPerPixel = bitsPerPixel / bitsPerComponent;
     SourceDataFormat srcDataFormat = kSourceFormatRGBA8;
     AlphaOp neededAlphaOp = kAlphaDoNothing;
     switch (CGImageGetAlphaInfo(cgImage)) {
@@ -79,10 +85,16 @@ bool GraphicsContext3D::getImageData(Image* image,
             neededAlphaOp = kAlphaDoUnmultiply;
         switch (componentsPerPixel) {
         case 2:
-            srcDataFormat = kSourceFormatAR8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatAR8;
+            else
+                srcDataFormat = kSourceFormatAR16;
             break;
         case 4:
-            srcDataFormat = kSourceFormatARGB8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatARGB8;
+            else
+                srcDataFormat = kSourceFormatARGB16;
             break;
         default:
             return false;
@@ -94,13 +106,22 @@ bool GraphicsContext3D::getImageData(Image* image,
             neededAlphaOp = kAlphaDoPremultiply;
         switch (componentsPerPixel) {
         case 1:
-            srcDataFormat = kSourceFormatA8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatA8;
+            else
+                srcDataFormat = kSourceFormatA16;
             break;
         case 2:
-            srcDataFormat = kSourceFormatAR8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatAR8;
+            else
+                srcDataFormat = kSourceFormatAR16;
             break;
         case 4:
-            srcDataFormat = kSourceFormatARGB8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatARGB8;
+            else
+                srcDataFormat = kSourceFormatARGB16;
             break;
         default:
             return false;
@@ -110,10 +131,16 @@ bool GraphicsContext3D::getImageData(Image* image,
         // This path is only accessible for MacOS earlier than 10.6.4.
         switch (componentsPerPixel) {
         case 2:
-            srcDataFormat = kSourceFormatAR8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatAR8;
+            else
+                srcDataFormat = kSourceFormatAR16;
             break;
         case 4:
-            srcDataFormat = kSourceFormatARGB8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatARGB8;
+            else
+                srcDataFormat = kSourceFormatARGB16;
             break;
         default:
             return false;
@@ -127,10 +154,16 @@ bool GraphicsContext3D::getImageData(Image* image,
             neededAlphaOp = kAlphaDoUnmultiply;
         switch (componentsPerPixel) {
         case 2:
-            srcDataFormat = kSourceFormatRA8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatRA8;
+            else
+                srcDataFormat = kSourceFormatRA16;
             break;
         case 4:
-            srcDataFormat = kSourceFormatRGBA8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatRGBA8;
+            else
+                srcDataFormat = kSourceFormatRGBA16;
             break;
         default:
             return false;
@@ -141,13 +174,22 @@ bool GraphicsContext3D::getImageData(Image* image,
             neededAlphaOp = kAlphaDoPremultiply;
         switch (componentsPerPixel) {
         case 1:
-            srcDataFormat = kSourceFormatA8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatA8;
+            else
+                srcDataFormat = kSourceFormatA16;
             break;
         case 2:
-            srcDataFormat = kSourceFormatRA8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatRA8;
+            else
+                srcDataFormat = kSourceFormatRA16;
             break;
         case 4:
-            srcDataFormat = kSourceFormatRGBA8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatRGBA8;
+            else
+                srcDataFormat = kSourceFormatRGBA16;
             break;
         default:
             return false;
@@ -156,10 +198,16 @@ bool GraphicsContext3D::getImageData(Image* image,
     case kCGImageAlphaNoneSkipLast:
         switch (componentsPerPixel) {
         case 2:
-            srcDataFormat = kSourceFormatRA8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatRA8;
+            else
+                srcDataFormat = kSourceFormatRA16;
             break;
         case 4:
-            srcDataFormat = kSourceFormatRGBA8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatRGBA8;
+            else
+                srcDataFormat = kSourceFormatRGBA16;
             break;
         default:
             return false;
@@ -168,10 +216,16 @@ bool GraphicsContext3D::getImageData(Image* image,
     case kCGImageAlphaNone:
         switch (componentsPerPixel) {
         case 1:
-            srcDataFormat = kSourceFormatR8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatR8;
+            else
+                srcDataFormat = kSourceFormatR16;
             break;
         case 3:
-            srcDataFormat = kSourceFormatRGB8;
+            if (bitsPerComponent == 8)
+                srcDataFormat = kSourceFormatRGB8;
+            else
+                srcDataFormat = kSourceFormatRGB16;
             break;
         default:
             return false;
@@ -188,7 +242,7 @@ bool GraphicsContext3D::getImageData(Image* image,
     outputVector.resize(width * height * 4);
     unsigned int srcUnpackAlignment = 0;
     size_t bytesPerRow = CGImageGetBytesPerRow(cgImage);
-    unsigned int padding = bytesPerRow - componentsPerPixel * width;
+    unsigned int padding = bytesPerRow - bitsPerPixel / 8 * width;
     if (padding) {
         srcUnpackAlignment = padding + 1;
         while (bytesPerRow % srcUnpackAlignment)
